--- a/lib/pelable_web/templates/post/index.html.eex
+++ b/lib/pelable_web/templates/post/index.html.eex
@@ -3,7 +3,7 @@
 <table>
   <thead>
     <tr>
-      <th>Body</th>
+      <th>title</th>
       <th>Uuid</th>
 
       <th></th>
@@ -12,7 +12,7 @@
   <tbody>
 <%= for post <- @posts do %>
     <tr>
-      <td><%= post.body %></td>
+      <td><%= post.title %></td>
       <td><%= post.uuid %></td>
 
       <td>
