--- a/lib/pelable_web/templates/project/form.html.eex
+++ b/lib/pelable_web/templates/project/form.html.eex
@@ -10,12 +10,8 @@
   <%= error_tag f, :name %>
 
   <%= label f, :description %>
-  <%= textarea f, :description %>
+  <%= text_input f, :description %>
   <%= error_tag f, :description %>
-
-  <%= label f, :uuid %>
-  <%= text_input f, :uuid %>
-  <%= error_tag f, :uuid %>
 
   <div>
     <%= submit "Save" %>
