delete workproject references from user

--- a/lib/pelable_web/templates/pow/registration/new.html.eex
+++ b/lib/pelable_web/templates/pow/registration/new.html.eex
@@ -31,6 +31,7 @@ Sign up to join our community!
   <%= if message = f.errors[:confirm_password] do %>
     <span id="error"> <%= translate_error(message) %> </span>
      <% end %>
+     <%= hidden_input f, :timezone%>
 <br>
   
     <%= submit "Register", class: "btn btn-primary btn-lg"%>
