--- a/lib/pelable_web/templates/habit/edit.html.eex
+++ b/lib/pelable_web/templates/habit/edit.html.eex
@@ -1,5 +1,5 @@
 <h1>Edit Habit</h1>
 
-<%= render "form.html", Map.put(assigns, :action, Routes.habit_path(@conn, :update, @habit)) %>
+<%= render "form.html", Map.put(assigns, :action, Routes.habit_path(@conn, :update, @habit.uuid)) %>
 
 <span><%= link "Back", to: Routes.habit_path(@conn, :index) %></span>
