modify streak if habit_completion response 200

--- a/lib/pelable_web/templates/habit/index.html.eex
+++ b/lib/pelable_web/templates/habit/index.html.eex
@@ -28,9 +28,14 @@
     xhr.onload = function () {
 	  let response = JSON.parse(xhr.responseText);
     console.log(response)
+      if (xhr.status == "200") {
+        add_completion_to_streak(habit_uuid)
+      } else {
+        console.log("Habit wasn't logged!")
+      }
       }
       xhr.send(json);
-      add_completion_to_streak(habit_uuid)
+      
   }
 
 
