--- a/lib/pelable_web/templates/reward/show.html.eex
+++ b/lib/pelable_web/templates/reward/show.html.eex
@@ -19,5 +19,5 @@
 
 </ul>
 
-<span><%= link "Edit", to: Routes.reward_path(@conn, :edit, @reward) %></span>
+<span><%= link "Edit", to: Routes.reward_path(@conn, :edit, @reward.slug, @reward.uuid) %></span>
 <span><%= link "Back", to: Routes.reward_path(@conn, :index) %></span>
