--- a/lib/pelable_web/templates/reward/form.html.eex
+++ b/lib/pelable_web/templates/reward/form.html.eex
@@ -8,14 +8,10 @@
   <%= label f, :name %>
   <%= text_input f, :name %>
   <%= error_tag f, :name %>
-
+  <br>
   <%= label f, :description %>
-  <%= text_input f, :description %>
+  <%= textarea f, :description %>
   <%= error_tag f, :description %>
-
-  <%= label f, :uuid %>
-  <%= text_input f, :uuid %>
-  <%= error_tag f, :uuid %>
 
   <div>
     <%= submit "Save" %>
