--- a/lib/pelable_web/templates/reward/index.html.eex
+++ b/lib/pelable_web/templates/reward/index.html.eex
@@ -18,9 +18,9 @@
       <td><%= reward.uuid %></td>
 
       <td>
-        <span><%= link "Show", to: Routes.reward_path(@conn, :show, reward) %></span>
-        <span><%= link "Edit", to: Routes.reward_path(@conn, :edit, reward) %></span>
-        <span><%= link "Delete", to: Routes.reward_path(@conn, :delete, reward), method: :delete, data: [confirm: "Are you sure?"] %></span>
+        <span><%= link "Show", to: Routes.reward_path(@conn, :show, reward.slug, reward.uuid) %></span>
+        <span><%= link "Edit", to: Routes.reward_path(@conn, :edit, reward.slug, reward.uuid) %></span>
+        <span><%= link "Delete", to: Routes.reward_path(@conn, :delete, reward.slug, reward.uuid), method: :delete, data: [confirm: "Are you sure?"] %></span>
       </td>
     </tr>
 <% end %>
