--- a/lib/pelable_web/templates/habit/index.html.eex
+++ b/lib/pelable_web/templates/habit/index.html.eex
@@ -4,17 +4,30 @@
 
 
   function add_completion_to_streak(habit_uuid){
-    let streak_holder = document.querySelector(`td[habit_uuid="${habit_uuid}"]`)
-    let new_count = parseInt(streak_holder.textContent) + 1
-    streak_holder.textContent = new_count.toString();
+    let streak_holder = document.getElementById(`streak_for_habit${habit_uuid}`)
+    let old_count = parseInt(streak_holder.innerText) || 0;
+    let new_count = old_count + 1;
+    streak_holder.innerText = new_count.toString();
+  }
+
+  function change_habit_status(habit_uuid){
+    let status_ball = document.getElementById(`habit_status${habit_uuid}`);
+    status_ball.className = "green-habit";
+  }
+
+  function green_checkmark(habit_uuid){
+    let checkmark = document.getElementById(`checkmark${habit_uuid}`);
+    checkmark.setAttribute("stroke", "green");
+    window.setTimeout(() => checkmark.setAttribute("stroke", "currentColor"), 150);
   }
 
 
 
   function log_habit(habit_uuid) {
-    let csrf_token = document.querySelector('meta[name="csrf-token"]').content
+    green_checkmark(habit_uuid);
+    let csrf_token = document.querySelector('meta[name="csrf-token"]').content;
 
-    let base_url = "<%= Routes.habit_url(@conn, :log_habit, "") %>" 
+    let base_url = "<%= Routes.habit_url(@conn, :log_habit, "") %>" ;
     let url = base_url + habit_uuid;
 
     let data = {};
@@ -29,9 +42,10 @@
 	  let response = JSON.parse(xhr.responseText);
     console.log(response)
       if (xhr.status == "200") {
-        add_completion_to_streak(habit_uuid)
+        add_completion_to_streak(habit_uuid);
+        change_habit_status(habit_uuid);
       } else {
-        console.log("Habit wasn't logged!")
+        console.log("Habit wasn't logged!");
       }
       }
       xhr.send(json);
@@ -42,19 +56,38 @@
 <h1>My Habits</h1>
 
 <!-- Button trigger modal -->
+<style>
+.green-habit {
+  height: 18px;
+  width: 18px;
+  float: right;
+  background-color: #008000;
+  border-radius: 50%;
+  display: inline-block;
+}
+.gray-habit {
+  height: 18px;
+  width: 18px;
+  float: right;
+  background-color: gray;
+  border-radius: 50%;
+  display: inline-block;
+}
+
+.check{
+  text-align: center;
+
+}
+.options {
+  text-align: right;
+}
+
+.svg-style {
+  cursor: pointer;
+}
+</style>
 
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Streak</th>
-      
-
-      <th></th>
-    </tr>
-  </thead>
-  <tbody>
 <%= for {habit, streak} <- @habits do %>
 
 
@@ -73,73 +106,22 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-        <button type="button" class="btn btn-primary" onclick="create_reward_for_habit('<%= habit.uuid %>', '<%= form_name(habit) %>')">Save</button>
+        <button type="button" class="btn btn-primary" data-dismiss="modal" onclick="create_reward_for_habit('<%= habit.uuid %>', '<%= form_name(habit) %>')">Save</button>
       </div>
     </div>
   </div>
 </div>
 
 
-    <tr>
-      <td> <%= habit.name %> </td>
-      <td habit_uuid="<%= habit.uuid %>"><%= show_streak_count_or_not(streak, @user_info["timezone"], habit.time_frequency) %></td>
-      
-
-      <td>
-      <button class="btn btn-primary" onclick="log_habit('<%= habit.uuid %>')"> Add log </button>
-      <button type="button" class="btn btn-primary" data-toggle="modal" data-target='#<%= "habit_reward_modal" <> habit.uuid %>'>
-      add reward
-      </button>
-        <span><%= link "Show", to: Routes.habit_path(@conn, :show, habit.uuid) %></span>
-        <span><%= link "Edit", to: Routes.habit_path(@conn, :edit, habit.uuid) %></span>
-        <span><%= link "Delete", to: Routes.habit_path(@conn, :delete, habit.uuid), method: :delete, data: [confirm: "Are you sure?"] %></span>
-      </td>
-    </tr>
-    
-<% end %>
-  </tbody>
-</table>
-
-<span><%= link "New Habit", to: Routes.habit_path(@conn, :new) %></span>
-
-<style>
-.dot {
-  height: 18px;
-  width: 18px;
-  float: right;
-  background-color: #008000;
-  border-radius: 50%;
-  display: inline-block;
-}
-.dot-no {
-  height: 18px;
-  width: 18px;
-  float: right;
-  background-color: gray;
-  border-radius: 50%;
-  display: inline-block;
-}
-
-.check{
-  text-align: center;
-}
-.options {
-  text-align: right;
-}
-
-.svg-style {
-  cursor: pointer;
-}
-</style>
 <div class="card" style="width: 18rem;">
 <div class="card-body">
-<h5 class="card-title">Take a walk <span class="dot-no"></span></h5> 
+<h5 class="card-title"><%= habit.name %><span id="<%= "habit_status" <> habit.uuid %>" class="<%= green_or_not(habit) %>"></span></h5> 
+<br>
 <br>
 <div class="check">
 
-<svg class="svg-style" onclick="log_habit('aasd')" xmlns="http://www.w3.org/2000/svg" width="44" height="44" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-check-square"><polyline points="9 11 12 14 22 4"></polyline><path d="M21 12v7a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11"></path></svg>
-
-5
+<svg id="<%= "checkmark" <> habit.uuid %>"class="svg-style" onclick="log_habit('<%= habit.uuid %>')" xmlns="http://www.w3.org/2000/svg" width="44" height="44" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-check-square"><polyline points="9 11 12 14 22 4"></polyline><path d="M21 12v7a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11"></path></svg>
+<div style="display: inline-block;" id='<%= "streak_for_habit" <> habit.uuid %>'><%= show_streak_count_or_not(streak, @user_info["timezone"], habit.time_frequency) %></div>
 </div>
 <br>
 <br>
@@ -150,11 +132,22 @@
     options
   </button>
   <div class="dropdown-menu">
-    <a class="dropdown-item" href="/rewards">Add reward </a>
+    <a class="dropdown-item" style="cursor: pointer;" data-toggle="modal" data-target='#<%= "habit_reward_modal" <> habit.uuid %>' >Add reward </a>
     <a class="dropdown-item" href="/rewards">Edit</a>
+    <%= link "Delete", to: Routes.habit_path(@conn, :delete, habit.uuid), class: :"dropdown-item", method: :delete, data: [confirm: "Are you sure?"] %>
   </div>
+
+</div>
+
 </div>
 </div>
+</div>
+    
+<% end %>
+
+
+<span><%= link "New Habit", to: Routes.habit_path(@conn, :new) %></span>
+
 <script>
 function convert_form_to_json(form){
   result = {}
