--- a/lib/pelable_web/templates/habit/index.html.eex
+++ b/lib/pelable_web/templates/habit/index.html.eex
@@ -69,7 +69,7 @@
   height: 18px;
   width: 18px;
   float: right;
-  background-color: gray;
+  background-color: #D6D1CD;
   border-radius: 50%;
   display: inline-block;
 }
