--- a/lib/pelable_web/templates/habit/index.html.eex
+++ b/lib/pelable_web/templates/habit/index.html.eex
@@ -13,6 +13,7 @@
   function change_habit_status(habit_uuid){
     let status_ball = document.getElementById(`habit_status${habit_uuid}`);
     status_ball.className = "green-habit";
+    status_ball.setAttribute("data-content", "You have completed this habit today");
   }
 
   function green_checkmark(habit_uuid){
