--- a/lib/pelable_web/templates/reminder/form.html.eex
+++ b/lib/pelable_web/templates/reminder/form.html.eex
@@ -75,7 +75,7 @@ function show_hour_format(){
   
   <%= label f, :hour %><%= select f, :time_hour, hour_options, id: "hour-input", class: "custom-select", value: "11", onChange: "show_hour_format()", style: "width: 100px;" %>
   <%= label f, :minute %>
-  <%= select f, :time_hour, minute_options, class: "custom-select", id: "minute-input", value: "30", onChange: "show_hour_format()", style: "width: 100px;" %>
+  <%= select f, :time_minute, minute_options, class: "custom-select", id: "minute-input", value: "30", onChange: "show_hour_format()", style: "width: 100px;" %>
   ⏰ <span id="12-hour-format" style=""> 11:30 AM </span>
   <br>
   <%= checkbox f, :recurrent, value: "check"%>
@@ -83,7 +83,9 @@ function show_hour_format(){
   <br>
   <%= label f, :time_frequency %>
   <%= select f, :time_frequency, current_frequency_options, class: "custom-select", style: "width: 130px;" %>
-  <div id="specific_date" style="visibility: hidden">
+  <%= hidden_input f, :habit_uuid, value: @conn.assigns.habit_uuid%>
+
+  <div id="specific_date" style="visibility: visible">
   <%= radio_button f, :start_date_option, "today"%>
   <%= label f, :Today %>
   <br>
