--- a/lib/pelable_web/templates/reminder/form.html.eex
+++ b/lib/pelable_web/templates/reminder/form.html.eex
@@ -28,10 +28,10 @@
       let minute = Number(minute_string);
 
      if(hour == 12 & minute == 0){
-       return "(Noon🌞)"
+       return "Noon🌞"
      } else{
      	if(hour == 0 & minute == 0){
-       return "(Midnight🌝)"
+       return "Midnight🌝"
      } else{
        return ""
      }
@@ -48,16 +48,16 @@
      }
    }
 
-function show_hour_format(){
- 	let hour_input = document.getElementById("hour-input")
-    let minute_input = document.getElementById("minute-input")
+function show_hour_format(this_element){
+ 	  let hour_input = this_element.childNodes[2]
+    let minute_input = this_element.childNodes[5]
     
     let transformed_hour = transform_hour(hour_input.value)
     let formatted_minute = transform_minute(minute_input.value)
     let special_time_value = special_time(hour_input.value, minute_input.value)
-    let final_format = transformed_hour.hour + ":" + formatted_minute + " " + transformed_hour.afternoon + special_time_value
+    let final_format = transformed_hour.hour + ":" + formatted_minute + " " + transformed_hour.afternoon + " " + special_time_value
  	
-    let new_hour_element = document.getElementById("12-hour-format")
+    let new_hour_element = this_element.childNodes[7]
     new_hour_element.textContent = final_format
  }
 </script>
@@ -72,18 +72,19 @@ function show_hour_format(){
   <%= label f, :name %>
   <%= text_input f, :name, class: "rounded-input" %>
   <br>
-  
-  <%= label f, :hour %><%= select f, :time_hour, hour_options, id: "hour-input", class: "custom-select", value: "11", onChange: "show_hour_format()", style: "width: 100px;" %>
+  <div id="hour-insertion" onChange="show_hour_format(this)">
+  <%= label f, :hour %><%= select f, :time_hour, hour_options, id: "hour-input", class: "custom-select", value: "11", style: "width: 100px;" %>
   <%= label f, :minute %>
-  <%= select f, :time_minute, minute_options, class: "custom-select", id: "minute-input", value: "30", onChange: "show_hour_format()", style: "width: 100px;" %>
+  <%= select f, :time_minute, minute_options, class: "custom-select", id: "minute-input", value: "30", style: "width: 100px;" %>
   ⏰ <span id="12-hour-format" style=""> 11:30 AM </span>
+  </div>
   <br>
   <%= checkbox f, :recurrent, value: "check"%>
   <%= label f, :Repeat, for: "recurrent" %>
   <br>
   <%= label f, :time_frequency %>
   <%= select f, :time_frequency, current_frequency_options, class: "custom-select", style: "width: 130px;" %>
-  <%= hidden_input f, :habit_uuid, value: @conn.assigns.habit_uuid%>
+  <%= hidden_input f, :habit_uuid, value: habit_uuid_or_not(@conn.assigns)%>
 
   <div id="specific_date" style="visibility: visible">
   <%= radio_button f, :start_date_option, "today"%>
