--- a/lib/pelable_web/templates/habit/new.html.eex
+++ b/lib/pelable_web/templates/habit/new.html.eex
@@ -1,5 +1,4 @@
-<h1>New Habit</h1>
+<h5>Create a new habit</h5>
 
 <%= render "form.html", Map.put(assigns, :action, Routes.habit_path(@conn, :create)) %>
 
-<span><%= link "Back", to: Routes.habit_path(@conn, :index) %></span>
