--- a/lib/pelable_web/templates/reminder/form.html.eex
+++ b/lib/pelable_web/templates/reminder/form.html.eex
@@ -57,7 +57,7 @@ function show_hour_format(this_element){
     let special_time_value = special_time(hour_input.value, minute_input.value)
     let final_format = transformed_hour.hour + ":" + formatted_minute + " " + transformed_hour.afternoon + " " + special_time_value
  	
-    let new_hour_element = this_element.childNodes[7]
+    let new_hour_element = this_element.childNodes[9]
     new_hour_element.textContent = final_format
  }
 </script>
@@ -76,6 +76,7 @@ function show_hour_format(this_element){
   <%= label f, :hour %><%= select f, :time_hour, hour_options, id: "hour-input", class: "custom-select", value: "11", style: "width: 100px;" %>
   <%= label f, :minute %>
   <%= select f, :time_minute, minute_options, class: "custom-select", id: "minute-input", value: "30", style: "width: 100px;" %>
+  <br>
   ⏰ <span id="12-hour-format" style=""> 11:30 AM </span>
   </div>
   <br>
@@ -104,6 +105,6 @@ function show_hour_format(this_element){
 
   
   <div>
-    <%= submit "Save", class: "btn btn-outline-primary" %>
+    <%= submit "Save", class: "btn btn-outline-primary btn-block" %>
   </div>
 <% end %>
