--- a/lib/pelable_web/templates/task/form.html.eex
+++ b/lib/pelable_web/templates/task/form.html.eex
@@ -5,8 +5,8 @@
     </div>
   <% end %>
 
-  <%= label f, :name %>
-  <%= text_input f, :name, style: "margin-left: 3px;" %>
+  <%= label f, :name, style: "display: inline-block;" %>
+  <%= text_input f, :name, style: "display: inline-block; margin-left: 12px; width: 250px;", class: "form-control" %>
   <%= error_tag f, :name %>
 
 <%= submit "Save", class: "btn btn-primary", style: "margin-left: 3px;" %>
