--- a/lib/pelable_web/templates/habit/index.html.eex
+++ b/lib/pelable_web/templates/habit/index.html.eex
@@ -12,7 +12,7 @@
 
   function change_habit_status(habit_uuid){
     let status_ball = document.getElementById(`habit_status${habit_uuid}`);
-    status_ball.className = "green-habit";
+    status_ball.className = "paris-habit";
     status_ball.setAttribute("data-content", "This habit is finished for today");
   }
 
@@ -78,14 +78,16 @@
 
 <!-- Button trigger modal -->
 <style>
-.green-habit {
+
+.paris-habit {
   height: 18px;
   width: 18px;
   float: right;
-  background-color: #008000;
+  background-color: #50C878;
   border-radius: 50%;
   display: inline-block;
 }
+
 .gray-habit {
   height: 18px;
   width: 18px;
